<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Especie extends Model
{
    protected $fillable = [
        'nombre',
    ];

    public function animal()
    {
        return $this->belongsTo('App\Models\Animal');
    }

    public function especiecuidadors()
    {
        return $this->belongsToMany('App\Models\EspecieCuidador');
    }

    public function especiecuidador()
    {
        return $this->belongsTo('App\Models\EspecieCuidador');
    }
}
